# ecommerce-churn-prediction

./: Dockerfile  README.md  app.py  bash_command.txt  docker-compose.yml  docker_wsl_dashboard.json  fastapi_dashboard.json  mlflow.db  prometheus.yml  pyproject.toml  requirements.txt  test.json  ui.py
data/: processed_data.csv
notebooks/: notebook.ipynb
src/: dict_vectorizer_transformer.py  predict.py  preprocess.py  test.py  train.py
