[project]
name = "ecommerce-churn-prediction"
version = "0.1.0"
description = "ML Zoomcamp Midterm Project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.121.2",
    "joblib==1.5.2",
    "matplotlib==3.10.7",
    "mlflow==3.6.0",
    "mlflow-skinny==3.6.0",
    "mlflow-tracing==3.6.0",
    "numpy==2.3.4",
    "pandas==2.3.3",
    "prometheus-client==0.23.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "requests==2.32.5",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "seaborn==0.13.2",
    "statsmodels==0.14.5",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "uvicorn==0.38.0",
]
